Fix action bar layout broken issue

--- a/zeppelin-web/src/app/notebook/notebook.css
+++ b/zeppelin-web/src/app/notebook/notebook.css
@@ -133,7 +133,7 @@
   position: fixed;
   top: 50px;
   width: 100%;
-  height: 54px;
+  min-height: 54px;
   z-index: 10001;
 }
 
